2011-27-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc1
	Switched to libsamplerate for resampling.
	Major code cleanup. 

2011-19-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.0
    Added option for generating 16000Hz sound files.

2009-06-11 Lefteris Zafiris <zaf.000@gmail.com> - 1.6.0.1
	Released as stable.
	Fixed a bug in argument parsing that could
	cause asterisk to crash.
	
2009-02-09 Lefteris Zafiris <zaf.000@gmail.com> - 1.6-0.1-beta
	Initial release 1.6-0.1-beta